Fix avatar width issue on IE11

--- a/client/Timeline.scss
+++ b/client/Timeline.scss
@@ -90,6 +90,7 @@
   color: #7c98b6;
 }
 .timeline-avatar {
+  min-width: 32px;
   width: 32px;
   height: 32px;
   border-radius: 100%;
